# orgPicsVideos

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.md
.github/workflows/: tests.yml
docs/: architecture.md  decisions.md  design.md  overview.md  test_coverage.md  user_guide.md
scripts/: cleanup_small_files.py
src/orgpicsvideos/: __init__.py  __main__.py  cleanup.py  rebuild.py
src/orgpicsvideos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/orgpicsvideos/core/: __init__.py  copier.py  logger.py  planner.py  rebuild.py  scanner.py  types.py  utils.py  validator.py
src/orgpicsvideos/ui/: __init__.py  app.py
tests/: README.md  conftest.py  test_cleanup_cli.py  test_copier.py  test_execution_partial.py  test_logger_resume.py  test_planner.py  test_rebuild.py  test_scanner_sidecar.py  test_sidecar_ops.py  test_sidecar_ui.py  test_ui_smoke.py  test_ui_trees.py  test_utils.py  test_validation.py  test_video_metadata.py
